Добавлены страницы: Ребенок, Работник

--- a/Kindergarten_app/Kindergarten_app.csproj
+++ b/Kindergarten_app/Kindergarten_app.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Entities\EducationTypes.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Genders.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Kid.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -133,6 +136,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\WorkersPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\AdminMenuPage.xaml.cs">
@@ -146,6 +153,9 @@
     </Compile>
     <Compile Include="Pages\ParentsPage.xaml.cs">
       <DependentUpon>ParentsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\WorkersPage.xaml.cs">
+      <DependentUpon>WorkersPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
